--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment {
         DOCKER_IMAGE_NAME = 'calculator'
-        GITHUB_REPO_URL = 'https://github.com/Elysian01/DevOps-Calculator-Project.git'
+        GITHUB_REPO_URL = 'https://github.com/Elysian01/DevOps-Calculator-Project-Using-Maven.git'
     }
 
     stages {
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 script {
                     // Checkout the code from the GitHub repository
-                    git branch: 'master', url: "${GITHUB_REPO_URL}"
+                    git branch: 'main', url: "${GITHUB_REPO_URL}"
                 }
             }
         }
