--- a/playbook.yml
+++ b/playbook.yml
@@ -19,4 +19,4 @@
               name: docker
               state: started
        - name: Running container
-         shell: docker run -it -d --name calculator elysian01/calculator_instance
+         shell: docker run -it -d elysian01/calculator_instance
